Changed ini file to be ignored for security purposes

--- a/src/prefstore/prefstore.ini
+++ b/src/prefstore/prefstore.ini
@@ -1,5 +1,5 @@
 [prefstoredb]
-hostname: [your prefstore address]
-username: [your db username]
-password: [your db password]
-dbname: [your database name]
+hostname: localhost
+username: prefstore
+password: cr1t1c4l
+dbname: prefstore
