added blank ini file

--- a/src/prefstore/prefstore.ini
+++ b/src/prefstore/prefstore.ini
@@ -1,5 +1,5 @@
 [prefstoredb]
-hostname: localhost
-username: prefstore
-password: cr1t1c4l
+hostname: YOUR_DB_HOSTNAME
+username: YOUR_DB_USERNAME
+password: YOUR_PASSWORD
 dbname: prefstore
