surely a test will work this time

--- a/src/prefstore/prefstore.ini
+++ b/src/prefstore/prefstore.ini
@@ -2,5 +2,5 @@
 hostname: YOUR_DB_HOSTNAME
 username: YOUR_DB_USERNAME
 password: YOUR_PASSWORD
-dbname: YOUR_DB_NAME_HERE
+dbname: YOUR_DBNAME_HERE
 
