--- a/src/prefstore/prefstore.cfg
+++ b/src/prefstore/prefstore.cfg
@@ -1,3 +1,6 @@
+# n.b. use "git update-index --assume-unchanged prefstore.cfg" 
+# when you customize this file with you're own settings 
+
 [prefstoredb]
 hostname: YOUR_DB_HOSTNAME
 username: YOUR_DB_USERNAME
