--- a/src/chrome extension/manifest.json
+++ b/src/chrome extension/manifest.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "description": "An extension that can create a linguistic model of the web content that view, saving this to your personal preferences datastore",
   "background_page": "background.html",
-  "update_url": "http://www.prefstore.org/extension_updates.xml",
+  "update_url": "http://79.125.106.208/static/extension_updates.xml",
   "browser_action": {
      "default_icon": "icon.png",
      "popup": "popup.html"
